# camelgo

./: .containerfile  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
src/camelgo/: dash_app.py  main.py  run_agent.py
src/camelgo/adapters/: __init__.py
src/camelgo/adapters/sim_env/: gym_env.py
src/camelgo/application/: __init__.py  dash_app.py
src/camelgo/domain/: __init__.py
src/camelgo/domain/agents/: agent.py  agent_types.py  ppo_model.py  random_player.py
src/camelgo/domain/environment/: action.py  camel.py  dice.py  game.py  game_config.py  gym_env.py  leg.py  player.py  state_manager.py
src/camelgo/domain/training/: single_agent_ppo.py
src/camelgo/training/: single_agent_ppo.py
tests/adapters/environment/: test_gym_env.py
tests/adapters/sim_env/: test_gym_env.py
tests/domain/environment/: test_camel.py  test_dice.py  test_game.py  test_game_config.py  test_leg.py  test_state_manager.py
