[project]
name = "camelgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gokhan Ceyhan", email = "gokhanceyhan01@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
camelgo = "camelgo:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
