[project]
name = "camelgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gokhan Ceyhan", email = "gokhanceyhan01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "flask",
    "dash",
    "dash-bootstrap-components",
    "debugpy>=1.8.17",
    "gymnasium>=0.29.1",
    "torch>=2.2.0",
    "torchrl>=0.3.0",
    "tensordict>=0.3.0",
    "numpy>=1.26.0",
]

[project.scripts]
camelgo = "camelgo:main"
camelgo-train = "camelgo.training.ppo_agent:run_cli"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
